[gd_scene load_steps=7 format=3 uid="uid://c00sspw25k4sh"]

[ext_resource type="Script" uid="uid://dklaod2oh7b1n" path="res://PlayerStuff/arm_element.gd" id="1_mtef1"]
[ext_resource type="Texture2D" uid="uid://bc61t8nckdw28" path="res://SNACKS.png" id="2_bgvey"]
[ext_resource type="Texture2D" uid="uid://qgb7gxomwx7t" path="res://icon.svg" id="3_ueipr"]

[sub_resource type="CircleShape2D" id="CircleShape2D_mtef1"]
radius = 8.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ueipr"]
size = Vector2(16, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vpo2g"]
size = Vector2(16, 6)

[node name="ArmElement" type="Node2D"]
script = ExtResource("1_mtef1")

[node name="HandArea" type="Area2D" parent="."]
unique_name_in_owner = true

[node name="Sprite2D" type="Sprite2D" parent="HandArea"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_bgvey")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HandArea"]
shape = SubResource("CircleShape2D_mtef1")

[node name="BottomArea" type="Area2D" parent="HandArea"]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 2

[node name="BAShape" type="CollisionShape2D" parent="HandArea/BottomArea"]
position = Vector2(0, 3)
shape = SubResource("RectangleShape2D_ueipr")

[node name="TopArea" type="Area2D" parent="HandArea"]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 2

[node name="TAShape" type="CollisionShape2D" parent="HandArea/TopArea"]
position = Vector2(0, -5)
shape = SubResource("RectangleShape2D_vpo2g")

[node name="Icon" type="Sprite2D" parent="."]
scale = Vector2(0.05, 0.05)
texture = ExtResource("3_ueipr")
